--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -111,67 +111,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import subprocess\n",
+    "# Cell 3: Configuration Loading\n",
+    "import json\n",
     "import os\n",
+    "from pathlib import Path\n",
     "\n",
-    "def get_terraform_output(output_name):\n",
-    "    \"\"\"Helper function to get terraform output values\"\"\"\n",
-    "    # Find terraform directory - check multiple possible locations\n",
-    "    possible_paths = [\n",
-    "        '../terraform',           # If running from notebooks/ subdirectory\n",
-    "        './terraform',            # If running from project root\n",
-    "        '../../terraform',        # If running from notebooks/subfolder\n",
-    "    ]\n",
+    "def load_config():\n",
+    "    \"\"\"Load configuration with multiple fallback options\"\"\"\n",
     "    \n",
-    "    terraform_dir = None\n",
-    "    for path in possible_paths:\n",
-    "        if os.path.exists(path) and os.path.isfile(os.path.join(path, 'main.tf')):\n",
-    "            terraform_dir = path\n",
-    "            break\n",
+    "    # Option 1: Load from config.json (recommended)\n",
+    "    config_file = Path('../config.json')\n",
+    "    if config_file.exists():\n",
+    "        with open(config_file) as f:\n",
+    "            config = json.load(f)\n",
+    "        print(f\"Configuration loaded from {config_file}\")\n",
+    "        return config\n",
     "    \n",
-    "    if not terraform_dir:\n",
-    "        raise FileNotFoundError(\n",
-    "            \"Could not find terraform directory. Make sure you're running this notebook \"\n",
-    "            \"from the project root or notebooks/ directory, and that terraform/ exists.\"\n",
-    "        )\n",
+    "    # Option 2: Try environment variables\n",
+    "    if os.environ.get('S3_BUCKET_NAME'):\n",
+    "        config = {\n",
+    "            's3_bucket_name': os.environ['S3_BUCKET_NAME'],\n",
+    "            'aws_region': os.environ.get('AWS_REGION', 'us-east-1')\n",
+    "        }\n",
+    "        print(\"Configuration loaded from environment variables\")\n",
+    "        return config\n",
     "    \n",
-    "    try:\n",
-    "        result = subprocess.run(\n",
-    "            ['terraform', 'output', '-raw', output_name], \n",
-    "            cwd=terraform_dir, \n",
-    "            capture_output=True, \n",
-    "            text=True,\n",
-    "            check=True\n",
-    "        )\n",
-    "        return result.stdout.strip()\n",
-    "    except subprocess.CalledProcessError as e:\n",
-    "        print(f\"❌ Terraform error: {e}\")\n",
-    "        print(f\"❌ stderr: {e.stderr}\")\n",
-    "        print(\"\\nTroubleshooting steps:\")\n",
-    "        print(\"1. Make sure you've run 'terraform apply' successfully\")\n",
-    "        print(\"2. Check that you're in the right directory\")\n",
-    "        print(\"3. Verify terraform output exists: terraform output\")\n",
-    "        raise\n",
-    "    except FileNotFoundError:\n",
-    "        print(\"❌ Terraform command not found\")\n",
-    "        print(\"Make sure Terraform is installed and in your PATH\")\n",
-    "        raise\n",
+    "    # Option 3: Interactive input \n",
+    "    print(\"Configuration not found. Let's set it up interactively.\")\n",
+    "    print(\"(You can skip this by running: python config_generator.py)\")\n",
+    "    \n",
+    "    config = {}\n",
+    "    bucket_name = input(\"Enter your S3 bucket name (from terraform output): \").strip()\n",
+    "    config['s3_bucket_name'] = bucket_name\n",
+    "    config['aws_region'] = 'us-east-1'\n",
+    "    \n",
+    "    # Save for next time\n",
+    "    with open('../config.json', 'w') as f:\n",
+    "        json.dump(config, f, indent=2)\n",
+    "    print(\"Configuration saved to config.json for future use\")\n",
+    "    \n",
+    "    return config\n",
     "\n",
-    "# Test if we can access terraform outputs\n",
+    "# Load configuration\n",
     "try:\n",
-    "    # Get S3 bucket from Terraform output\n",
-    "    BUCKET_NAME = get_terraform_output('s3_bucket_name')\n",
-    "    print(f\"✅ Using S3 bucket: {BUCKET_NAME}\")\n",
+    "    config = load_config()\n",
+    "    BUCKET_NAME = config['s3_bucket_name']\n",
+    "    AWS_REGION = config.get('aws_region', 'us-east-1')\n",
     "    \n",
-    "except Exception as e:\n",
-    "    print(f\"❌ Could not get Terraform outputs: {e}\")\n",
-    "    print(\"\\n🔧 Alternative: Use manual configuration for testing\")\n",
+    "    print(f\"Using S3 bucket: {BUCKET_NAME}\")\n",
+    "    print(f\"Using AWS region: {AWS_REGION}\")\n",
     "    \n",
-    "    # Fallback to manual configuration\n",
-    "    BUCKET_NAME = input(\"Enter your S3 bucket name: \")\n",
-    "    \n",
-    "    print(f\"✅ Using manual configuration:\")\n",
-    "    print(f\"   Bucket: {BUCKET_NAME}\")\n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"Configuration cancelled. Please run this cell again when ready.\")\n",
+    "    BUCKET_NAME = None\n",
+    "    AWS_REGION = 'us-east-1'\n",
     "\n",
     "class AnimalDataExplorer:\n",
     "    \"\"\"Class to explore and analyze animal shelter data\"\"\"\n",
@@ -185,21 +178,20 @@
     "        \"\"\"Load data from S3 or local file\"\"\"\n",
     "        if self.s3_bucket:\n",
     "            try:\n",
-    "                # Load from S3\n",
     "                s3 = boto3.client('s3')\n",
     "                obj = s3.get_object(Bucket=self.s3_bucket, \n",
     "                                  Key='raw/austin_animal_outcomes.csv')\n",
     "                self.data = pd.read_csv(obj['Body'])\n",
-    "                print(f\"✅ Data loaded from S3: {len(self.data):,} records\")\n",
+    "                print(f\"Data loaded from S3: {len(self.data):,} records\")\n",
     "            except Exception as e:\n",
-    "                print(f\"❌ Failed to load from S3: {e}\")\n",
+    "                print(f\"Failed to load from S3: {e}\")\n",
     "                print(\"Trying local file instead...\")\n",
     "                self.data = pd.read_csv('../data/austin_animal_outcomes.csv')\n",
-    "                print(f\"✅ Data loaded from local file: {len(self.data):,} records\")\n",
+    "                print(f\"Data loaded from local file: {len(self.data):,} records\")\n",
     "        else:\n",
     "            # Load from local file\n",
     "            self.data = pd.read_csv(self.data_path or '../data/austin_animal_outcomes.csv')\n",
-    "            print(f\"✅ Data loaded from local file: {len(self.data):,} records\")\n",
+    "            print(f\"Data loaded from local file: {len(self.data):,} records\")\n",
     "            \n",
     "        return self\n",
     "\n",
@@ -223,18 +215,18 @@
    "outputs": [],
    "source": [
     "# Display basic information about the dataset\n",
-    "print(\"📊 Dataset Overview\")\n",
+    "print(\"Dataset Overview\")\n",
     "print(\"-\" * 50)\n",
     "print(f\"Shape: {explorer.data.shape}\")\n",
     "print(f\"Memory usage: {explorer.data.memory_usage(deep=True).sum() / 1024**2:.1f} MB\")\n",
     "\n",
-    "print(\"\\n📋 Sample Data:\")\n",
+    "print(\"\\nSample Data:\")\n",
     "display(explorer.data.head())\n",
     "\n",
-    "print(\"\\n📋 Column Information:\")\n",
+    "print(\"\\nColumn Information:\")\n",
     "explorer.data.info()\n",
     "\n",
-    "print(\"\\n🔍 Missing Values:\")\n",
+    "print(\"\\nMissing Values:\")\n",
     "missing = explorer.data.isnull().sum()\n",
     "missing_pct = (missing / len(explorer.data)) * 100\n",
     "missing_df = pd.DataFrame({\n",
@@ -259,7 +251,7 @@
    "outputs": [],
    "source": [
     "# Analyze outcome types and trends\n",
-    "print(\"🎯 Outcome Analysis\")\n",
+    "print(\"Outcome Analysis\")\n",
     "print(\"-\" * 50)\n",
     "\n",
     "# Outcome distribution\n",
@@ -303,7 +295,7 @@
    "outputs": [],
    "source": [
     "# Analyze temporal patterns in the data\n",
-    "print(\"📅 Temporal Patterns\")\n",
+    "print(\"Temporal Patterns\")\n",
     "print(\"-\" * 50)\n",
     "\n",
     "# Convert DateTime to pandas datetime with better error handling\n",
@@ -416,7 +408,7 @@
    "outputs": [],
    "source": [
     "# Analyze animal types, breeds, and characteristics\n",
-    "print(\"🐕 Animal Characteristics\")\n",
+    "print(\"Animal Characteristics\")\n",
     "print(\"-\" * 50)\n",
     "\n",
     "# Animal type distribution\n",
@@ -488,7 +480,7 @@
     "# Age analysis (convert to numeric)\n",
     "plt.subplot(2, 2, 3)\n",
     "age_data = convert_age_to_days(explorer.data['Age upon Outcome'])\n",
-    "age_data = age_data[age_data.notna() & (age_data < 3650)]  # Filter outliers\n",
+    "age_data = age_data[age_data.notna() & (age_data < 3650)]  \n",
     "plt.hist(age_data / 365, bins=50, alpha=0.7)\n",
     "plt.title('Age Distribution (Years)')\n",
     "plt.xlabel('Age (Years)')\n",
@@ -523,7 +515,7 @@
    "outputs": [],
    "source": [
     "# Generate key insights from the data\n",
-    "print(\"💡 Key Insights\")\n",
+    "print(\"Key Insights\")\n",
     "print(\"-\" * 50)\n",
     "\n",
     "total_animals = len(explorer.data)\n",
@@ -532,9 +524,9 @@
     "outcomes = explorer.data['Outcome Type'].value_counts()\n",
     "adoption_rate = (outcomes.get('Adoption', 0) / total_animals) * 100\n",
     "\n",
-    "print(f\"📈 Adoption Rate: {adoption_rate:.1f}%\")\n",
+    "print(f\"Adoption Rate: {adoption_rate:.1f}%\")\n",
     "\n",
-    "# Time insights (with error handling)\n",
+    "# Time insights\n",
     "try:\n",
     "    # Make sure DateTime is properly converted\n",
     "    if 'DateTime' in explorer.data.columns:\n",
@@ -546,9 +538,9 @@
     "            peak_month = valid_dates.dt.month.mode()\n",
     "            \n",
     "            if len(peak_hour) > 0:\n",
-    "                print(f\"⏰ Peak Activity Hour: {peak_hour.iloc[0]}:00\")\n",
+    "                print(f\"Peak Activity Hour: {peak_hour.iloc[0]}:00\")\n",
     "            if len(peak_month) > 0:\n",
-    "                print(f\"📅 Peak Activity Month: {peak_month.iloc[0]}\")\n",
+    "                print(f\"Peak Activity Month: {peak_month.iloc[0]}\")\n",
     "        else:\n",
     "            print(\"⚠️  Could not analyze time patterns (no valid dates)\")\n",
     "    else:\n",
@@ -566,9 +558,9 @@
     "if 'Breed' in explorer.data.columns:\n",
     "    top_breed = explorer.data['Breed'].mode()\n",
     "    if len(top_breed) > 0:\n",
-    "        print(f\"🧬 Most Common Breed: {top_breed.iloc[0]}\")\n",
+    "        print(f\"Most Common Breed: {top_breed.iloc[0]}\")\n",
     "\n",
-    "# Age insights (with error handling)\n",
+    "# Age insights \n",
     "try:\n",
     "    if 'Age upon Outcome' in explorer.data.columns:\n",
     "        age_days = convert_age_to_days(explorer.data['Age upon Outcome'])\n",
@@ -576,7 +568,7 @@
     "        \n",
     "        if len(valid_ages) > 0:\n",
     "            avg_age_years = valid_ages.mean() / 365\n",
-    "            print(f\"📊 Average Age: {avg_age_years:.1f} years\")\n",
+    "            print(f\"Average Age: {avg_age_years:.1f} years\")\n",
     "        else:\n",
     "            print(\"⚠️  Could not calculate average age (no valid age data)\")\n",
     "    else:\n",
@@ -585,11 +577,11 @@
     "except Exception as e:\n",
     "    print(f\"⚠️  Age analysis failed: {e}\")\n",
     "\n",
-    "print(\"\\n🎯 Data Exploration Complete!\")\n",
+    "print(\"\\nData Exploration Complete!\")\n",
     "print(\"Use these insights to inform your ML model development.\")\n",
     "\n",
     "# Save processed data for ML training\n",
-    "print(\"\\n💾 Saving processed data for ML training...\")\n",
+    "print(\"\\nSaving processed data for ML training...\")\n",
     "try:\n",
     "    processed_data = explorer.data.copy()\n",
     "    \n",
@@ -618,7 +610,7 @@
    "outputs": [],
    "source": [
     "# Analyze temporal patterns in the data\n",
-    "print(\"📅 Temporal Patterns\")\n",
+    "print(\"Temporal Patterns\")\n",
     "print(\"-\" * 50)\n",
     "\n",
     "# Convert DateTime to pandas datetime with better error handling\n",
