--- a/notebooks/02_ml_training.ipynb
+++ b/notebooks/02_ml_training.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,60 +49,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Configuration - Get these values from terraform output\n",
-    "import subprocess\n",
+    "# Configuration and Initialization\n",
+    "import json\n",
+    "import os\n",
+    "from pathlib import Path\n",
     "\n",
-    "def get_terraform_output(output_name):\n",
-    "    \"\"\"Helper function to get terraform output values\"\"\"\n",
-    "    # Find terraform directory - check multiple possible locations\n",
-    "    possible_paths = [\n",
-    "        '../terraform',           # If running from notebooks/ subdirectory\n",
-    "        './terraform',            # If running from project root\n",
-    "        '../../terraform',        # If running from notebooks/subfolder\n",
-    "    ]\n",
+    "def load_config():\n",
+    "    \"\"\"Load configuration with multiple fallback options\"\"\"\n",
     "    \n",
-    "    terraform_dir = None\n",
-    "    for path in possible_paths:\n",
-    "        if os.path.exists(path) and os.path.isfile(os.path.join(path, 'main.tf')):\n",
-    "            terraform_dir = path\n",
-    "            break\n",
+    "    # Option 1: Load from config.json (recommended)\n",
+    "    config_file = Path('../config.json')\n",
+    "    if config_file.exists():\n",
+    "        with open(config_file) as f:\n",
+    "            config = json.load(f)\n",
+    "        print(f\"Configuration loaded from {config_file}\")\n",
+    "        return config\n",
     "    \n",
-    "    if not terraform_dir:\n",
-    "        raise FileNotFoundError(\n",
-    "            \"Could not find terraform directory. Make sure you're running this notebook \"\n",
-    "            \"from the project root or notebooks/ directory, and that terraform/ exists.\"\n",
-    "        )\n",
+    "    # Option 2: Try environment variables\n",
+    "    if os.environ.get('S3_BUCKET_NAME'):\n",
+    "        config = {\n",
+    "            's3_bucket_name': os.environ['S3_BUCKET_NAME'],\n",
+    "            'aws_region': os.environ.get('AWS_REGION', 'us-east-1'),\n",
+    "            'sagemaker_role_arn': os.environ.get('SAGEMAKER_ROLE_ARN', '')\n",
+    "        }\n",
+    "        print(\"Configuration loaded from environment variables\")\n",
+    "        return config\n",
     "    \n",
-    "    result = subprocess.run(\n",
-    "        ['terraform', 'output', '-raw', output_name], \n",
-    "        cwd=terraform_dir, \n",
-    "        capture_output=True, \n",
-    "        text=True\n",
-    "    )\n",
-    "    return result.stdout.strip()\n",
+    "    # Option 3: Interactive input (beginner-friendly fallback)\n",
+    "    print(\"Configuration not found. Let's set it up interactively.\")\n",
+    "    print(\"(You can skip this by running: python config_generator.py)\")\n",
+    "    \n",
+    "    config = {}\n",
+    "    bucket_name = input(\"Enter your S3 bucket name (from terraform output): \").strip()\n",
+    "    config['s3_bucket_name'] = bucket_name\n",
+    "    config['aws_region'] = 'us-east-1'\n",
+    "    \n",
+    "    sagemaker_role = input(\"Enter SageMaker role ARN (optional, press Enter to skip): \").strip()\n",
+    "    if sagemaker_role:\n",
+    "        config['sagemaker_role_arn'] = sagemaker_role\n",
+    "    \n",
+    "    # Save for next time\n",
+    "    with open('../config.json', 'w') as f:\n",
+    "        json.dump(config, f, indent=2)\n",
+    "    print(\"Configuration saved to config.json for future use\")\n",
+    "    \n",
+    "    return config\n",
     "\n",
+    "# Load configuration\n",
     "try:\n",
-    "    # Get actual values from your deployed infrastructure\n",
-    "    BUCKET_NAME = get_terraform_output('s3_bucket_name')\n",
-    "    SAGEMAKER_ROLE = get_terraform_output('sagemaker_role_arn')\n",
-    "    REGION = 'us-east-1'\n",
+    "    config = load_config()\n",
+    "    BUCKET_NAME = config['s3_bucket_name']\n",
+    "    AWS_REGION = config.get('aws_region', 'us-east-1')\n",
+    "    SAGEMAKER_ROLE = config.get('sagemaker_role_arn', None)\n",
     "    \n",
-    "    print(f\"Using bucket: {BUCKET_NAME}\")\n",
-    "    print(f\"Using role: {SAGEMAKER_ROLE}\")\n",
+    "    print(f\"Using S3 bucket: {BUCKET_NAME}\")\n",
+    "    print(f\"Using AWS region: {AWS_REGION}\")\n",
+    "    if SAGEMAKER_ROLE:\n",
+    "        print(f\"SageMaker role configured: {SAGEMAKER_ROLE[:50]}...\")\n",
+    "    else:\n",
+    "        print(\"SageMaker role not configured (local training only)\")\n",
     "    \n",
-    "    # Initialize SageMaker session\n",
-    "    sagemaker_session = sagemaker.Session()\n",
+    "    # Initialize SageMaker session if role is available\n",
+    "    try:\n",
+    "        if SAGEMAKER_ROLE:\n",
+    "            sagemaker_session = sagemaker.Session()\n",
+    "            print(\"SageMaker session initialized\")\n",
+    "        else:\n",
+    "            sagemaker_session = None\n",
+    "            print(\"Running in local mode (no SageMaker deployment)\")\n",
+    "    except ImportError:\n",
+    "        print(\"SageMaker not available - local training only\")\n",
+    "        sagemaker_session = None\n",
     "    \n",
-    "except Exception as e:\n",
-    "    print(f\"❌ Could not get Terraform outputs: {e}\")\n",
-    "    print(\"Using local configuration for testing\")\n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"Configuration cancelled. Please run this cell again when ready.\")\n",
     "    BUCKET_NAME = None\n",
+    "    AWS_REGION = 'us-east-1'\n",
     "    SAGEMAKER_ROLE = None\n",
-    "    REGION = 'us-east-1'"
+    "    sagemaker_session = None"
    ]
   },
   {
@@ -114,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,11 +256,11 @@
     "        return np.nan\n",
     "\n",
     "# Load the data\n",
-    "print(\"🔍 Looking for data sources...\")\n",
+    "print(\"Looking for data sources...\")\n",
     "df = prepare_data()\n",
     "\n",
     "# Display basic info about the dataset\n",
-    "print(f\"\\n📊 Dataset Overview:\")\n",
+    "print(f\"\\nDataset Overview:\")\n",
     "print(f\"Dataset shape: {df.shape}\")\n",
     "if 'Outcome Type' in df.columns:\n",
     "    print(f\"Outcome types: {df['Outcome Type'].value_counts().to_dict()}\")\n",
@@ -249,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,14 +451,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_and_evaluate(X_train, X_test, y_train, y_test):\n",
     "    \"\"\"Train the Random Forest model and evaluate its performance\"\"\"\n",
     "    \n",
-    "    print(\"🚀 Training Random Forest model...\")\n",
+    "    print(\"Training Random Forest model...\")\n",
     "    \n",
     "    # Create and train the model\n",
     "    model = RandomForestClassifier(\n",
@@ -491,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,15 +527,15 @@
     "    \"\"\"Save the trained model and encoders for later use\"\"\"\n",
     "    \n",
     "    # Create models directory if it doesn't exist\n",
-    "    os.makedirs('../models', exist_ok=True)\n",
+    "    os.makedirs('./models', exist_ok=True)\n",
     "    \n",
     "    # Save the trained model\n",
-    "    model_path = '../models/animal_adoption_model.pkl'\n",
+    "    model_path = './models/animal_adoption_model.pkl'\n",
     "    joblib.dump(model, model_path)\n",
     "    print(f\"✅ Model saved to {model_path}\")\n",
     "    \n",
     "    # Save the label encoders\n",
-    "    encoders_path = '../models/label_encoders.pkl'\n",
+    "    encoders_path = './models/label_encoders.pkl'\n",
     "    joblib.dump(label_encoders, encoders_path)\n",
     "    print(f\"✅ Encoders saved to {encoders_path}\")\n",
     "    \n",
@@ -519,18 +547,18 @@
     "    }\n",
     "    \n",
     "    import json\n",
-    "    with open('../models/model_info.json', 'w') as f:\n",
+    "    with open('./models/model_info.json', 'w') as f:\n",
     "        json.dump(feature_info, f, indent=2)\n",
     "    print(f\"✅ Model info saved to ../models/model_info.json\")\n",
     "    \n",
-    "    print(f\"\\n🎯 Model training completed and artifacts saved!\")\n",
+    "    print(f\"\\nModel training completed and artifacts saved!\")\n",
     "    \n",
     "    return model_path, encoders_path\n",
     "\n",
     "# Save all artifacts\n",
     "model_path, encoders_path = save_model_artifacts()\n",
     "\n",
-    "print(\"\\n📦 Training Summary:\")\n",
+    "print(\"\\nTraining Summary:\")\n",
     "print(f\"Model type: Random Forest Classifier\")\n",
     "print(f\"Features used: {len(X_train_encoded.columns)}\")\n",
     "print(f\"Training samples: {len(X_train_encoded)}\")\n",
@@ -548,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,6 +606,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
