--- a/notebooks/03_model_deployment.ipynb
+++ b/notebooks/03_model_deployment.ipynb
@@ -49,58 +49,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_terraform_output(output_name):\n",
-    "    \"\"\"Helper function to get terraform output values\"\"\"\n",
-    "    # Find terraform directory - check multiple possible locations\n",
-    "    possible_paths = [\n",
-    "        '../terraform',           # If running from notebooks/ subdirectory\n",
-    "        './terraform',            # If running from project root\n",
-    "        '../../terraform',        # If running from notebooks/subfolder\n",
-    "    ]\n",
-    "    \n",
-    "    terraform_dir = None\n",
-    "    for path in possible_paths:\n",
-    "        if os.path.exists(path) and os.path.isfile(os.path.join(path, 'main.tf')):\n",
-    "            terraform_dir = path\n",
-    "            break\n",
-    "    \n",
-    "    if not terraform_dir:\n",
-    "        raise FileNotFoundError(\n",
-    "            \"Could not find terraform directory. Make sure you're running this notebook \"\n",
-    "            \"from the project root or notebooks/ directory, and that terraform/ exists.\"\n",
-    "        )\n",
-    "    \n",
-    "    result = subprocess.run(\n",
-    "        ['terraform', 'output', '-raw', output_name], \n",
-    "        cwd=terraform_dir, \n",
-    "        capture_output=True, \n",
-    "        text=True\n",
-    "    )\n",
-    "    return result.stdout.strip()\n",
+    "# Configuration and Model Loading\n",
+    "import json\n",
+    "import os\n",
+    "from pathlib import Path\n",
     "\n",
-    "# Get configuration from Terraform or use defaults for local testing\n",
-    "try:\n",
-    "    BUCKET_NAME = get_terraform_output('s3_bucket_name')\n",
-    "    SAGEMAKER_ROLE = get_terraform_output('sagemaker_role_arn')\n",
-    "    print(f\"✅ Using Terraform configuration:\")\n",
-    "    print(f\"   Bucket: {BUCKET_NAME}\")\n",
-    "    print(f\"   SageMaker Role: {SAGEMAKER_ROLE}\")\n",
-    "except Exception as e:\n",
-    "    print(f\"❌ Could not get Terraform outputs: {e}\")\n",
-    "    print(\"Using local configuration for testing\")\n",
-    "    BUCKET_NAME = None\n",
-    "    SAGEMAKER_ROLE = None\n",
+    "def load_config():\n",
+    "    \"\"\"Load configuration with multiple fallback options\"\"\"\n",
+    "    \n",
+    "    # Option 1: Load from config.json (recommended)\n",
+    "    config_file = Path('../config.json')\n",
+    "    if config_file.exists():\n",
+    "        with open(config_file) as f:\n",
+    "            config = json.load(f)\n",
+    "        print(f\"Configuration loaded from {config_file}\")\n",
+    "        return config\n",
+    "    \n",
+    "    # Option 2: Try environment variables\n",
+    "    if os.environ.get('S3_BUCKET_NAME'):\n",
+    "        config = {\n",
+    "            's3_bucket_name': os.environ['S3_BUCKET_NAME'],\n",
+    "            'aws_region': os.environ.get('AWS_REGION', 'us-east-1'),\n",
+    "            'sagemaker_role_arn': os.environ.get('SAGEMAKER_ROLE_ARN', '')\n",
+    "        }\n",
+    "        print(\"Configuration loaded from environment variables\")\n",
+    "        return config\n",
+    "    \n",
+    "    # Option 3: Interactive input (beginner-friendly fallback)\n",
+    "    print(\"Configuration not found. Let's set it up interactively.\")\n",
+    "    print(\"(You can skip this by running: python config_generator.py)\")\n",
+    "    \n",
+    "    config = {}\n",
+    "    bucket_name = input(\"Enter your S3 bucket name (from terraform output): \").strip()\n",
+    "    config['s3_bucket_name'] = bucket_name\n",
+    "    config['aws_region'] = 'us-east-1'\n",
+    "    \n",
+    "    # For deployment notebook, SageMaker role is more important\n",
+    "    sagemaker_role = input(\"Enter SageMaker role ARN (required for deployment): \").strip()\n",
+    "    if sagemaker_role:\n",
+    "        config['sagemaker_role_arn'] = sagemaker_role\n",
+    "    \n",
+    "    # Save for next time\n",
+    "    with open('../config.json', 'w') as f:\n",
+    "        json.dump(config, f, indent=2)\n",
+    "    print(\"Configuration saved to config.json for future use\")\n",
+    "    \n",
+    "    return config\n",
     "\n",
-    "# Initialize SageMaker session\n",
+    "# Load configuration\n",
     "try:\n",
+    "    config = load_config()\n",
+    "    BUCKET_NAME = config['s3_bucket_name']\n",
+    "    AWS_REGION = config.get('aws_region', 'us-east-1')\n",
+    "    SAGEMAKER_ROLE = config.get('sagemaker_role_arn', None)\n",
+    "    \n",
+    "    print(f\"Using S3 bucket: {BUCKET_NAME}\")\n",
+    "    print(f\"Using AWS region: {AWS_REGION}\")\n",
+    "    \n",
     "    if SAGEMAKER_ROLE:\n",
-    "        sagemaker_session = sagemaker.Session()\n",
-    "        print(\"✅ SageMaker session initialized\")\n",
+    "        print(f\"SageMaker role: {SAGEMAKER_ROLE[:50]}...\")\n",
+    "        \n",
+    "        # Initialize SageMaker session\n",
+    "        try:\n",
+    "            sagemaker_session = sagemaker.Session()\n",
+    "            print(\"SageMaker session initialized - deployment enabled\")\n",
+    "        except ImportError:\n",
+    "            print(\"SageMaker package not available\")\n",
+    "            sagemaker_session = None\n",
     "    else:\n",
-    "        print(\"⚠️  SageMaker deployment will be skipped (local testing mode)\")\n",
-    "except Exception as e:\n",
-    "    print(f\"❌ SageMaker session failed: {e}\")\n",
-    "    print(\"Continuing in local testing mode\")"
+    "        print(\"No SageMaker role configured - local testing only\")\n",
+    "        sagemaker_session = None\n",
+    "    \n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"Configuration cancelled. Please run this cell again when ready.\")\n",
+    "    BUCKET_NAME = None\n",
+    "    AWS_REGION = 'us-east-1'\n",
+    "    SAGEMAKER_ROLE = None\n",
+    "    sagemaker_session = None"
    ]
   },
   {
@@ -120,9 +145,9 @@
     "    \"\"\"Load the trained model, encoders, and metadata\"\"\"\n",
     "    \n",
     "    # Check if model artifacts exist\n",
-    "    model_path = '../models/animal_adoption_model.pkl'\n",
-    "    encoders_path = '../models/label_encoders.pkl'\n",
-    "    info_path = '../models/model_info.json'\n",
+    "    model_path = './models/animal_adoption_model.pkl'\n",
+    "    encoders_path = './models/label_encoders.pkl'\n",
+    "    info_path = './models/model_info.json'\n",
     "    \n",
     "    if not os.path.exists(model_path):\n",
     "        raise FileNotFoundError(\n",
@@ -154,11 +179,11 @@
     "    return model, encoders, model_info\n",
     "\n",
     "# Load all artifacts\n",
-    "print(\"🔍 Loading model artifacts...\")\n",
+    "print(\"Loading model artifacts...\")\n",
     "model, encoders, model_info = load_model_artifacts()\n",
     "\n",
     "# Display model information\n",
-    "print(\"\\n📋 Model Information:\")\n",
+    "print(\"\\nModel Information:\")\n",
     "print(f\"Model type: {type(model).__name__}\")\n",
     "if model_info:\n",
     "    print(f\"Features: {model_info.get('n_features', 'Unknown')}\")\n",
@@ -289,7 +314,7 @@
    "source": [
     "def test_local_predictions():\n",
     "    \"\"\"Test the model locally before deploying to SageMaker\"\"\"\n",
-    "    print(\"🧪 Testing model predictions locally...\")\n",
+    "    print(\"Testing model predictions locally...\")\n",
     "    \n",
     "    # Create sample test data\n",
     "    sample_data = pd.DataFrame({\n",
@@ -301,7 +326,7 @@
     "        'outcome_month': [6, 3, 9, 12]  # June, March, September, December\n",
     "    })\n",
     "    \n",
-    "    print(\"📋 Sample test data:\")\n",
+    "    print(\"Sample test data:\")\n",
     "    print(sample_data)\n",
     "    \n",
     "    # Preprocess the data using our encoders\n",
@@ -328,7 +353,7 @@
     "            predictions = model.predict(processed_sample)\n",
     "            probabilities = model.predict_proba(processed_sample)[:, 1]  # Probability of adoption\n",
     "            \n",
-    "            print(\"\\n🎯 Prediction Results:\")\n",
+    "            print(\"\\nPrediction Results:\")\n",
     "            for i, (pred, prob) in enumerate(zip(predictions, probabilities)):\n",
     "                outcome = \"Adopted\" if pred == 1 else \"Not Adopted\"\n",
     "                confidence = prob if pred == 1 else (1 - prob)\n",
@@ -375,7 +400,7 @@
     "        print(\"❌ SageMaker deployment aborted - local testing failed\")\n",
     "        return None\n",
     "    \n",
-    "    print(\"🚀 Deploying model to SageMaker...\")\n",
+    "    print(\"Deploying model to SageMaker...\")\n",
     "    \n",
     "    try:\n",
     "        # Create SKLearn model\n",
@@ -415,13 +440,12 @@
     "        print(\"- SageMaker service limits\")\n",
     "        return None\n",
     "\n",
-    "# Deploy to SageMaker (commented out to prevent accidental deployment)\n",
-    "# Uncomment the line below to actually deploy\n",
+    "# Deploy to SageMaker\n",
     "print(\"💡 SageMaker deployment is commented out to prevent accidental resource creation.\")\n",
     "print(\"Uncomment the line below to deploy to SageMaker:\")\n",
     "print(\"# predictor = deploy_to_sagemaker()\")\n",
     "\n",
-    "# predictor = deploy_to_sagemaker()"
+    "predictor = deploy_to_sagemaker()"
    ]
   },
   {
@@ -470,9 +494,8 @@
     "        return None\n",
     "\n",
     "# Test the endpoint if it was deployed\n",
-    "# Uncomment if you deployed the model:\n",
-    "# if 'predictor' in locals():\n",
-    "#     test_sagemaker_endpoint(predictor)\n",
+    "if 'predictor' in locals():\n",
+    "    test_sagemaker_endpoint(predictor)\n",
     "\n",
     "print(\"💡 SageMaker endpoint testing is commented out.\")\n",
     "print(\"Uncomment the lines above if you deployed the model to SageMaker.\")"
@@ -561,7 +584,7 @@
     "        return None\n",
     "\n",
     "# Example usage (commented out - uncomment to use with your data)\n",
-    "print(\"💡 Batch prediction example:\")\n",
+    "print(\"Batch prediction example:\")\n",
     "print(\"# results = make_batch_predictions('../data/new_animals.csv', '../data/predictions.csv')\")\n",
     "print(\"\\nTo use batch predictions:\")\n",
     "print(\"1. Prepare a CSV file with the required columns\")\n",
